created new files and modified others

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 </div>
       <h4 style="color: #999999;" class="text-center">-OR-</h4>  
 
-      <form action="">
+      <form action="crop/index.html">
         <div class="mb-3">
             <label for="Email" class="form-label">Email address*</label>
             <input type="email" name="email" class="form-control" id="email" aria-describedby="email">
